--- a/lib/diplomacy_web/templates/layout/app.html.eex
+++ b/lib/diplomacy_web/templates/layout/app.html.eex
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title><%= assigns[:page_title] || "Diplomacy · Phoenix Framework" %></title>
-    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+    <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/js/App.css") %>"/>
     <%= csrf_meta_tag() %>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height:100%;"></div>
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
