--- a/assets/src/components/Button/style.css
+++ b/assets/src/components/Button/style.css
@@ -1,8 +1,9 @@
 .button {
   width: fit-content;
   cursor: pointer;
-  padding: var(--space-2) var(--space-3) var(--space-2) var(--space-3);
+  padding: var(--space-1) var(--space-3) var(--space-1) var(--space-3);
   border-radius: 2px;
+  /* border: 2px solid; */
 }
 
 /* .button:focus {
