--- a/assets/src/App.css
+++ b/assets/src/App.css
@@ -1,176 +1,16 @@
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
 /* Reset all margins and paddings */
-* {
-  margin: 0px;
-  padding: 0px;
-}
+/* * {
+    margin: 0px;
+    padding: 0px;
+} */
+
 /* And make sure we're filling the page */
 html, body, main {
-  height: 100%;
-  font-size: 20px;
+    height: 100%;
 }
-
-:root {
-  --dip-offwhite-500: #faf4dd;
-  --dip-black: #0c0a23;
-  --dip-blue: #4682b4;
-  /* --dip-black: #393D3F; */
-  --dip-red: #D26359;
-  --dip-orange: #C78C1E;
-  --dip-grey: #978885;
-  --dip-dark-green: #5D7967;
-  --dip-light-green: #9EB194;
-  --dip-offwhite-300: #f5ecd6;
-  --space-1: 0.25rem;
-  --space-2: 0.5rem;
-  --space-3: 1rem;
-  --space-4: 1.5rem;
-}
-
-/* Colors */
-/* Offwhite */
-.bgOffwhite { background-color: var(--dip-offwhite-500); }
-.bgOffwhite300 { background-color: var(--dip-offwhite-300); }
-.cOffwhite { color: var(--dip-offwhite-500); }
-
-.cWhite { color: white; }
-.cBlack { color: var(--dip-black); }
-.cBlue { color: var(--dip-blue); }
-.cRed { color: var(--dip-red); }
-.cOrange { color: var(--dip-orange); }
-.cDarkGreen { color: var(--dip-dark-green); }
-.cLightGreen { color: var(--dip-light-green); }
-.bgBlack { background-color: var(--dip-black); }
-.bgBlue { background-color: var(--dip-blue); }
-.bgGrey { background-color: var(--dip-grey); }
-.bgRed { background-color: var(--dip-red); }
-.bgDarkGreen { background-color: var(--dip-dark-green); }
-.bgLightGreen { background-color: var(--dip-light-green); }
-.bgOrange { background-color: var(--dip-orange); }
-.bgWhite { background-color: white; }
-
-/* Typography */
-.copperplate { font-family: Copperplate,Copperplate Gothic Light,fantasy; }
-.bold { font-weight: bold; }
-.serif { font-family: 'Lancelot', cursive; }
-.sansSerif { font-family: sans-serif; }
-.monospace { font-family: monospace; }
-.italic { font-style: italic; }
-.fontNormal { font-size: 1rem; }
-.fontTiny { font-size: 0.65rem; }
-.fontMedium { font-size: 1.5rem; }
-.fontLarge { font-size: 2rem; }
-.fontHuge { font-size: 3rem; }
-.underlineNone { text-decoration: none; }
-.underline { text-decoration: underline; }
-.bulletsInside { list-style-position: inside; }
-
-/* Layout stuff */
-.block { display: block; }
-.inline { display: inline; }
-.flex { display: flex; }
-.grid { display: grid; }
-.alignCenter { align-items: center; }
-.justifyCenter { justify-content: center; }
-.heightAll { height: 100%; }
-.widthAll { width: 100%; }
-.absolute { position: absolute; }
-.fixed { position: fixed; }
-.bulletsNone { list-style-type: none; }
-.overflowAuto { overflow: auto; }
-.textCenter { text-align: center; }
-.column { flex-direction: column; }
-.row { flex-direction: row; }
-.alignBaseline { align-items: baseline; }
-.textLeft { text-align: left; }
-.floatLeft { float: left; }
-
-/* Borders */
-.border { border: 2px solid; }
-.borderBottom { border-bottom: 2px solid; }
-.borderTop { border-top: 2px solid; }
-.borderRight { border-right: 2px solid; }
-.borderLeft { border-left: 2px solid; }
-.bcRed { border-color: var(--dip-red); }
-.bcGrey { border-color: var(--dip-grey); }
-.bcOrange { border-color: var(--dip-orange); }
-.bcBlack { border-color: var(--dip-black); }
-.bcBlue { border-color: var(--dip-blue); }
-
-/* Margins and paddings */
-.m0 { margin: 0; }
-.ml0 { margin-left: 0; }
-.mr0 { margin-right: 0; }
-.mb0 { margin-bottom: 0; }
-.mt0 { margin-top: 0; }
-
-.m1 { margin: var(--space-1); }
-.ml1 { margin-left: var(--space-1); }
-.mr1 { margin-right: var(--space-1); }
-.mb1 { margin-bottom: var(--space-1); }
-.mt1 { margin-top: var(--space-1); }
-
-.m2 { margin: var(--space-2); }
-.ml2 { margin-left: var(--space-2); }
-.mr2 { margin-right: var(--space-2); }
-.mb2 { margin-bottom: var(--space-2); }
-.mt2 { margin-top: var(--space-2); }
-
-.m3 { margin: var(--space-3); }
-.ml3 { margin-left: var(--space-3); }
-.mr3 { margin-right: var(--space-3); }
-.mb3 { margin-bottom: var(--space-3); }
-.mt3 { margin-top: var(--space-3); }
-
-.m4 { margin: var(--space-4); }
-.ml4 { margin-left: var(--space-4); }
-.mr4 { margin-right: var(--space-4); }
-.mb4 { margin-bottom: var(--space-4); }
-.mt4 { margin-top: var(--space-4); }
-
-.p0 { padding: 0; }
-.pl0 { padding-left: 0; }
-.pr0 { padding-right: 0; }
-.pb0 { padding-bottom: 0; }
-.pt0 { padding-top: 0; }
-
-.p1 { padding: var(--space-1); }
-.pl1 { padding-left: var(--space-1); }
-.pr1 { padding-right: var(--space-1); }
-.pt1 { padding-top: var(--space-1); }
-.pb1 { padding-bottom: var(--space-1); }
-
-.p2 { padding: var(--space-2); }
-.pl2 { padding-left: var(--space-2); }
-.pr2 { padding-right: var(--space-2); }
-.pt2 { padding-top: var(--space-2); }
-.pb2 { padding-bottom: var(--space-2); }
-
-.p3 { padding: var(--space-3); }
-.pl3 { padding-left: var(--space-3); }
-.pr3 { padding-right: var(--space-3); }
-.pb3 { padding-bottom: var(--space-3); }
-.pt3 { padding-top: var(--space-3); }
-
-.p4 { padding: var(--space-4); }
-.pl4 { padding-left: var(--space-4); }
-.pr4 { padding-right: var(--space-4); }
-.pb4 { padding-bottom: var(--space-4); }
-.pt4 { padding-top: var(--space-4); }
-
-/* Special stuff */
-.fancyFocus:focus { outline: 3px solid var(--dip-light-green); }
-.fancyBorder {
-  border-left: 50px solid;
-  border-image: linear-gradient(to right, crimson .1%, gold .1% 99.9%) 2;
-}
-.fancyLink {
-  color: crimson;
-  font-weight: bold;
-  text-decoration: underline;
-}
-.fancyLink:hover {
-  font-style: italic;
-}
-.cursorPointer { cursor: pointer; }
-.cursorDefault { cursor: default; }
-.cursorHelp { cursor: help; }
